--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,6 +40,16 @@
     font-family: 'PP Mori', sans-serif;
   }
 
+  button {
+    font-family: PP Mori, sans-serif;
+    font-weight: 900;
+  }
+
+  a {
+    font-family: PP Mori, sans-serif;
+    font-weight: 900;
+  }
+
 
   .category-bar p{
     font-family: 'PP Mori', sans-serif;
@@ -100,4 +110,119 @@
     font-weight: bold;
     font-size: 18px;
     text-transform: uppercase;
+  }
+
+
+  /* Login Forms */
+
+
+  .login-form {
+    background-color: #fff;
+    border: 3px solid black;
+    border-radius: 25px;
+    padding: 4rem;
+    font-family: PP Mori, sans-serif;
+  }
+
+  .form-button {
+    width: 100%;
+    background-color: #000;
+    border-radius: 25px;
+    padding: 10px 25px;
+    color: white;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+  }
+
+  .form-button:hover {
+    background-color: white;
+    color: #000;
+    border: 3px solid black;
+  }
+
+  input {
+    border: 2px solid black;
+    border-radius: 25px;
+    padding: 20px 35px;
+    width: 100%;
+    font-weight: 900;
+  }
+
+
+  /* Sign Up Forms */
+
+
+   .signup-form {
+    background-color: #fff;
+    border: 3px solid black;
+    border-radius: 25px;
+    padding: 2rem 2rem;
+    font-family: PP Mori, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 600px;
+  }
+
+
+  .productCard {
+    border: 3px solid black;
+    border-radius: 25px;
+    padding: 1rem;
+  }
+
+  /* .productCard:hover {
+    transform: scale(1.05);
+  } */
+
+  .productCard img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 25px;
+  }
+
+  .addToCart {
+    background-color: #000;
+    border: 2px solid black;
+    border-radius: 25px;
+    padding: 5px 20px;
+    color: #fff;
+  }
+
+  /* Sell Form */
+
+  .sell-form {
+    border: 3px solid black;
+    border-radius: 25px;
+    padding: 20px;
+    padding: 4rem;
+  }
+
+  select {
+    border: 2px solid black;
+    border-radius: 25px;
+    padding: 10px 25px;
+    width: 100%;
+    font-weight: 900;
+  }
+
+  .sell-button {
+    width: 100%;
+    background-color: #000;
+    border-radius: 25px;
+    padding: 10px 25px;
+    color: white;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+  }
+
+  .upload-input {
+    border: 2px dashed black;
+    border-radius: 25px;
+    padding: 10px 25px;
+    width: 100%;
+    font-weight: 900;
   }
