latest Presentation code

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -103,6 +103,7 @@
   .footer {
     border-top: 3px solid black;
     border-bottom: 3px solid black;
+    background-color: #fff;
   }
 
   .category-bar li {
